kubernetes/apps/datasci/dask/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dask-gateway
  namespace: datasci
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:database
spec:
  ingressClassName: internal
  rules:
  - host: dask.ekenhome.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dask-cluster-scheduler
            port:
              number: 8787
  tls:
  - hosts:
    - dask.ekenhome.se
