kubernetes/apps/datasci/dask/cluster/tcproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: dask-scheduler-tcp
  namespace: datasci
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: istio-system
      sectionName: dask-scheduler # Must match the listener name in Gateway
  rules:
    - backendRefs:
        - name: dask-cluster-scheduler
          port: 8786
