kubernetes/apps/datasci/dask/cluster/authpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: dask-scheduler-allow
  namespace: datasci
spec:
  selector:
    matchLabels:
      dask.org/component: scheduler
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/cluster-gateway-istio"]
      to:
        - operation:
            methods: ["*"]
            paths: ["/*"]
            ports: ["8786", "8787"]
